Bug 1346179 - Update debugger frontend 3/10/2017. r=jdescottes
MozReview-Commit-ID: 5p9BT87rzoB

UltraBlame original commit: 10219ec758f8838f9b2e6840a690edf79207fc8b

--- a/devtools/client/debugger/new/debugger.css
+++ b/devtools/client/debugger/new/debugger.css
@@ -8364,82 +8364,6 @@ weight
 normal
 ;
 }
-/
-*
-vim
-:
-set
-ts
-=
-2
-sw
-=
-2
-sts
-=
-2
-et
-:
-*
-/
-/
-*
-This
-Source
-Code
-Form
-is
-subject
-to
-the
-terms
-of
-the
-Mozilla
-Public
-*
-License
-v
-.
-2
-.
-0
-.
-If
-a
-copy
-of
-the
-MPL
-was
-not
-distributed
-with
-this
-file
-*
-You
-can
-obtain
-one
-at
-http
-:
-/
-/
-mozilla
-.
-org
-/
-MPL
-/
-2
-.
-0
-/
-.
-*
-/
 .
 search
 -
@@ -8832,9 +8756,9 @@ var
 -
 theme
 -
-body
+comment
 -
-color
+alt
 )
 ;
 }
@@ -8898,7 +8822,7 @@ svg
 {
 width
 :
-6px
+8px
 ;
 }
 .
@@ -8966,11 +8890,17 @@ big
 {
 padding
 :
-13px
+11px
+;
+margin
+-
+right
+:
+7px
 ;
 width
 :
-40px
+27px
 ;
 height
 :
@@ -9060,41 +8990,11 @@ close
 :
 hover
 {
-background
-:
-var
-(
--
--
-theme
--
-selection
--
-background
-)
-;
 border
 -
 radius
 :
 2px
-;
-}
-.
-close
--
-btn
--
-big
-.
-close
-:
-hover
-path
-{
-fill
-:
-white
 ;
 }
 .
@@ -9114,7 +9014,7 @@ calc
 ;
 height
 :
-40px
+27px
 ;
 background
 -
@@ -9126,7 +9026,7 @@ var
 -
 theme
 -
-body
+toolbar
 -
 background
 )
@@ -9148,6 +9048,12 @@ splitter
 color
 )
 ;
+padding
+-
+right
+:
+10px
+;
 display
 :
 flex
@@ -9163,6 +9069,39 @@ shrink
 search
 -
 field
+.
+big
+{
+height
+:
+40px
+;
+font
+-
+size
+:
+14px
+;
+}
+.
+search
+-
+field
+.
+big
+input
+{
+font
+-
+size
+:
+14px
+;
+}
+.
+search
+-
+field
 i
 {
 display
@@ -9171,11 +9110,11 @@ block
 ;
 padding
 :
-13px
+0
 ;
 width
 :
-40px
+16px
 ;
 }
 .
@@ -9194,6 +9133,21 @@ width
 search
 -
 field
+.
+big
+input
+{
+line
+-
+height
+:
+40px
+;
+}
+.
+search
+-
+field
 input
 {
 border
@@ -9206,12 +9160,6 @@ height
 :
 30px
 ;
-font
--
-size
-:
-14px
-;
 background
 -
 color
@@ -9222,7 +9170,7 @@ var
 -
 theme
 -
-body
+toolbar
 -
 background
 )
@@ -9235,9 +9183,11 @@ var
 -
 theme
 -
-comment
+body
 -
-alt
+color
+-
+inactive
 )
 ;
 width
@@ -9273,9 +9223,11 @@ var
 -
 theme
 -
-comment
+body
 -
-alt
+color
+-
+inactive
 )
 ;
 }
@@ -9283,25 +9235,60 @@ alt
 search
 -
 field
+i
 .
 magnifying
 -
 glass
+.
+search
+-
+field
+i
+.
+sad
+-
+face
 {
-background
--
-color
+padding
 :
-var
-(
+6px
+;
+width
+:
+24px
+;
+}
+.
+search
 -
+field
+.
+big
+i
+.
+magnifying
 -
-theme
+glass
+.
+search
 -
-body
+field
+.
+big
+i
+.
+sad
 -
-background
-)
+face
+{
+padding
+:
+14px
+;
+width
+:
+40px
 ;
 }
 .
@@ -9341,6 +9328,35 @@ color
 search
 -
 field
+:
+:
+-
+webkit
+-
+input
+-
+placeholder
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+-
+inactive
+)
+;
+}
+.
+search
+-
+field
 input
 :
 :
@@ -9354,9 +9370,11 @@ var
 -
 theme
 -
-comment
+body
 -
-alt
+color
+-
+inactive
 )
 ;
 }
@@ -9402,6 +9420,8 @@ search
 -
 field
 .
+big
+.
 summary
 {
 line
@@ -9409,6 +9429,20 @@ line
 height
 :
 40px
+;
+}
+.
+search
+-
+field
+.
+summary
+{
+line
+-
+height
+:
+27px
 ;
 padding
 -
@@ -9448,16 +9482,19 @@ width
 100
 %
 ;
-max
+background
 -
-height
+color
 :
-calc
+var
 (
-100
-%
 -
-32px
+-
+theme
+-
+toolbar
+-
+background
 )
 ;
 margin
@@ -9471,6 +9508,26 @@ padding
 overflow
 :
 auto
+;
+}
+.
+result
+-
+list
+.
+big
+{
+max
+-
+height
+:
+calc
+(
+100
+%
+-
+32px
+)
 ;
 }
 .
@@ -9501,17 +9558,15 @@ result
 list
 li
 {
-border
+color
 :
-2px
-solid
 var
 (
 -
 -
 theme
 -
-splitter
+body
 -
 color
 )
@@ -9535,11 +9590,73 @@ background
 ;
 padding
 :
-10px
+4px
+13px
 ;
-margin
+display
+:
+flex
+;
+justify
+-
+content
+:
+space
+-
+between
+;
+}
+.
+result
+-
+list
+li
+:
+first
+-
+child
+{
+border
+-
+top
+:
+none
+;
+}
+.
+result
+-
+list
+.
+big
+li
+{
+padding
 :
 10px
+;
+flex
+-
+direction
+:
+column
+;
+border
+-
+bottom
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
 ;
 }
 .
@@ -9580,7 +9697,7 @@ selected
 {
 border
 :
-2px
+1px
 solid
 var
 (
@@ -9592,6 +9709,61 @@ selection
 -
 background
 )
+;
+}
+.
+result
+-
+list
+.
+big
+li
+.
+selected
+{
+padding
+-
+left
+:
+9px
+;
+padding
+-
+top
+:
+9px
+;
+}
+.
+search
+-
+bar
+.
+result
+-
+list
+li
+.
+selected
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+selection
+-
+background
+)
+;
+color
+:
+white
 ;
 }
 .
@@ -9625,6 +9797,83 @@ result
 list
 li
 .
+selected
+.
+title
+{
+color
+:
+white
+;
+}
+.
+result
+-
+list
+.
+big
+li
+.
+selected
+.
+title
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+)
+;
+}
+.
+result
+-
+list
+.
+big
+li
+.
+subtitle
+{
+word
+-
+break
+:
+break
+-
+all
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+-
+inactive
+)
+;
+}
+.
+result
+-
+list
+.
+big
+li
+.
 subtitle
 {
 line
@@ -9635,17 +9884,76 @@ height
 .
 5em
 ;
+}
+.
+search
+-
+bar
+.
+result
+-
+list
+li
+.
+selected
+.
+subtitle
+{
 color
 :
-grey
+white
 ;
-word
+}
+.
+search
 -
-break
+bar
+.
+result
+-
+list
+{
+border
+-
+bottom
 :
-break
+1px
+solid
+var
+(
 -
-all
+-
+theme
+-
+splitter
+-
+color
+)
+;
+}
+.
+theme
+-
+dark
+.
+result
+-
+list
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+background
+)
 ;
 }
 .
@@ -10260,6 +10568,39 @@ comment
 ;
 }
 .
+theme
+-
+dark
+.
+source
+-
+list
+.
+tree
+.
+node
+.
+focused
+{
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+tab
+-
+toolbar
+-
+background
+)
+;
+}
+.
 toggle
 -
 button
@@ -10319,7 +10660,7 @@ svg
 {
 width
 :
-14px
+16px
 ;
 fill
 :
@@ -10382,6 +10723,26 @@ margin
 left
 :
 auto
+;
+margin
+-
+right
+:
+5px
+;
+}
+.
+toggle
+-
+button
+-
+start
+{
+margin
+-
+left
+:
+5px
 ;
 }
 html
@@ -10452,6 +10813,22 @@ toggle
 -
 button
 -
+end
+.
+vertical
+{
+margin
+-
+bottom
+:
+2px
+;
+}
+.
+toggle
+-
+button
+-
 start
 .
 collapsed
@@ -10485,7 +10862,7 @@ var
 -
 theme
 -
-body
+toolbar
 -
 background
 )
@@ -10554,7 +10931,7 @@ none
 ;
 height
 :
-30px
+27px
 ;
 box
 -
@@ -10871,6 +11248,36 @@ height
 .
 search
 -
+bar
+.
+search
+-
+field
+{
+padding
+-
+left
+:
+7px
+;
+}
+.
+search
+-
+bar
+.
+close
+-
+btn
+{
+padding
+:
+6px
+;
+}
+.
+search
+-
 bottom
 -
 bar
@@ -10929,7 +11336,7 @@ calc
 ;
 height
 :
-40px
+27px
 ;
 background
 -
@@ -10941,7 +11348,7 @@ var
 -
 theme
 -
-body
+toolbar
 -
 background
 )
@@ -11296,16 +11703,24 @@ var
 -
 theme
 -
-comment
+body
 -
-alt
+color
+-
+inactive
 )
 ;
 font
 -
 size
 :
-12px
+11px
+;
+font
+-
+weight
+:
+normal
 ;
 margin
 :
@@ -11488,248 +11903,7 @@ max
 -
 height
 :
-calc
-(
-100
-%
--
-80px
-)
-;
-border
--
-bottom
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-background
--
-color
-:
-var
-(
--
--
-theme
--
-body
--
-background
-)
-;
-}
-.
-search
--
-bar
-.
-result
--
-list
-li
-{
-border
-:
-none
-;
-color
-:
-var
-(
--
--
-theme
--
-body
--
-color
-)
-;
-border
--
-bottom
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-padding
-:
-4px
-13px
-;
-margin
-:
-0
-;
-display
-:
-flex
-;
-justify
--
-content
-:
-space
--
-between
-;
-}
-.
-search
--
-bar
-.
-result
--
-list
-li
-:
-first
--
-child
-{
-border
--
-top
-:
-none
-;
-}
-.
-search
--
-bar
-.
-result
--
-list
-li
-:
-last
--
-child
-{
-border
--
-bottom
-:
-none
-;
-}
-.
-search
--
-bar
-.
-result
--
-list
-li
-.
-selected
-{
-background
--
-color
-:
-var
-(
--
--
-theme
--
-selection
--
-background
-)
-;
-color
-:
-white
-;
-}
-.
-search
--
-bar
-.
-result
--
-list
-li
-.
-subtitle
-{
-font
--
-weight
-:
-lighter
-;
-}
-.
-search
--
-bar
-.
-result
--
-list
-li
-.
-selected
-.
-subtitle
-{
-color
-:
-white
-;
-}
-.
-theme
--
-dark
-.
-result
--
-list
-{
-background
--
-color
-:
-var
-(
--
--
-theme
--
-body
--
-background
-)
+230px
 ;
 }
 .
@@ -13349,11 +13523,9 @@ var
 -
 theme
 -
-body
+comment
 -
-color
--
-inactive
+alt
 )
 ;
 }
@@ -13385,11 +13557,9 @@ var
 -
 theme
 -
-body
+comment
 -
-color
--
-inactive
+alt
 )
 ;
 opacity
@@ -15557,6 +15727,21 @@ index
 :
 1
 ;
+background
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+background
+)
+;
 }
 .
 theme
@@ -16714,7 +16899,7 @@ inline
 -
 start
 :
-8px
+3px
 ;
 margin
 -
@@ -17033,34 +17218,16 @@ top
 :
 0
 ;
-line
--
-height
-:
-0
-;
-line
--
-height
-:
-13px
-;
 display
 :
 inline
 -
-block
+flex
+;
+justify
+-
+content
+:
+center
 ;
 }
-/
-*
-#
-sourceMappingURL
-=
-debugger
-.
-css
-.
-map
-*
-/
