Bug 1317149 - Comment out a part of this test that causes to many intermittent failures. r=me
UltraBlame original commit: d27b3d263111453b0d3951241a1e3c5028d3ccd4

--- a/layout/reftests/css-grid/grid-fragmentation-002.html
+++ b/layout/reftests/css-grid/grid-fragmentation-002.html
@@ -941,6 +941,28 @@ div
 div
 >
 <
+!
+-
+-
+TODO
+(
+bug
+1347692
+)
+:
+this
+caused
+too
+many
+intermittent
+failures
+see
+bug
+1317149
+and
+bug
+1264056
+<
 div
 class
 =
@@ -1021,6 +1043,9 @@ div
 <
 /
 div
+>
+-
+-
 >
 <
 div
