--- a/layout/reftests/css-grid/grid-fragmentation-002-ref.html
+++ b/layout/reftests/css-grid/grid-fragmentation-002-ref.html
@@ -1058,6 +1058,28 @@ div
 div
 >
 <
+!
+-
+-
+TODO
+(
+bug
+1347692
+)
+:
+this
+caused
+too
+many
+intermittent
+failures
+see
+bug
+1317149
+and
+bug
+1264056
+<
 div
 class
 =
@@ -1152,6 +1174,9 @@ div
 <
 /
 div
+>
+-
+-
 >
 <
 div
