Bug 1347607 - Fix .devtools-button for text as image usage. r=pbro
MozReview-Commit-ID: 8H3HZc9GAuc

UltraBlame original commit: fb043d9263e2f384522dcdeb9d364f9f85953a8e

--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -1815,6 +1815,36 @@ in
 -
 out
 ;
+/
+*
+For
+text
+-
+as
+-
+image
+usage
+match
+the
+SVG
+color
+*
+/
+color
+:
+#
+0b0b0b
+;
+direction
+:
+ltr
+;
+font
+-
+size
+:
+11px
+;
 }
 .
 devtools
