Bug 1345932 - show warning info in about:debugging#workers if multi-e10s is on;r=ochameau
If multi e10s is enabled, service worker debugging is unavailable.
We temporarily disabled the start/push/debug buttons in about:debugging
for all service workers if multi-e10s is on.

A warning section is also displayed on top of about:debugging, letting the
user know that they can set dom.ipc.processCount to 1 in order to force
a single content process and restore debugging capabilities.

MozReview-Commit-ID: IPAlbOq2Hij

UltraBlame original commit: b94a7f7b3980dcc0dfcfbf03d37845e0925d16f4

--- a/devtools/client/aboutdebugging/aboutdebugging.css
+++ b/devtools/client/aboutdebugging/aboutdebugging.css
@@ -649,14 +649,15 @@ addons
 install
 -
 error
-{
-background
+.
+service
 -
-color
-:
-#
-f3b0b0
-;
+worker
+-
+multi
+-
+process
+{
 padding
 :
 5px
@@ -678,19 +679,64 @@ end
 ;
 }
 .
-service
--
-worker
--
-disabled
-.
-warning
-.
 addons
 -
 install
 -
 error
+{
+background
+-
+color
+:
+#
+f3b0b0
+;
+}
+.
+service
+-
+worker
+-
+multi
+-
+process
+{
+background
+-
+color
+:
+#
+ffeebb
+;
+line
+-
+height
+:
+1
+.
+5em
+;
+}
+.
+service
+-
+worker
+-
+multi
+-
+process
+.
+update
+-
+button
+{
+margin
+:
+5px
+0
+;
+}
 .
 warning
 {
@@ -724,14 +770,6 @@ size
 13px
 12px
 ;
-margin
--
-inline
--
-end
-:
-10px
-;
 display
 :
 inline
@@ -746,6 +784,14 @@ height
 :
 12px
 ;
+margin
+-
+inline
+-
+end
+:
+10px
+;
 }
 media
 (
@@ -758,20 +804,6 @@ resolution
 1dppx
 )
 {
-.
-service
--
-worker
--
-disabled
-.
-warning
-.
-addons
--
-install
--
-error
 .
 warning
 {
@@ -800,6 +832,60 @@ png
 )
 ;
 }
+}
+.
+addons
+-
+install
+-
+error
+.
+warning
+.
+service
+-
+worker
+-
+multi
+-
+process
+.
+warning
+{
+/
+*
+The
+warning
+icon
+can
+be
+hard
+to
+see
+on
+red
+/
+yellow
+backgrounds
+this
+turns
+the
+icon
+to
+a
+black
+icon
+.
+*
+/
+filter
+:
+brightness
+(
+0
+%
+)
+;
 }
 .
 addons
