--- a/devtools/client/aboutdebugging/aboutdebugging.css
+++ b/devtools/client/aboutdebugging/aboutdebugging.css
@@ -649,15 +649,14 @@ addons
 install
 -
 error
-.
-service
--
-worker
--
-multi
--
-process
 {
+background
+-
+color
+:
+#
+f3b0b0
+;
 padding
 :
 5px
@@ -679,64 +678,19 @@ end
 ;
 }
 .
+service
+-
+worker
+-
+disabled
+.
+warning
+.
 addons
 -
 install
 -
 error
-{
-background
--
-color
-:
-#
-f3b0b0
-;
-}
-.
-service
--
-worker
--
-multi
--
-process
-{
-background
--
-color
-:
-#
-ffeebb
-;
-line
--
-height
-:
-1
-.
-5em
-;
-}
-.
-service
--
-worker
--
-multi
--
-process
-.
-update
--
-button
-{
-margin
-:
-5px
-0
-;
-}
 .
 warning
 {
@@ -770,6 +724,14 @@ size
 13px
 12px
 ;
+margin
+-
+inline
+-
+end
+:
+10px
+;
 display
 :
 inline
@@ -784,14 +746,6 @@ height
 :
 12px
 ;
-margin
--
-inline
--
-end
-:
-10px
-;
 }
 media
 (
@@ -804,6 +758,20 @@ resolution
 1dppx
 )
 {
+.
+service
+-
+worker
+-
+disabled
+.
+warning
+.
+addons
+-
+install
+-
+error
 .
 warning
 {
@@ -832,60 +800,6 @@ png
 )
 ;
 }
-}
-.
-addons
--
-install
--
-error
-.
-warning
-.
-service
--
-worker
--
-multi
--
-process
-.
-warning
-{
-/
-*
-The
-warning
-icon
-can
-be
-hard
-to
-see
-on
-red
-/
-yellow
-backgrounds
-this
-turns
-the
-icon
-to
-a
-black
-icon
-.
-*
-/
-filter
-:
-brightness
-(
-0
-%
-)
-;
 }
 .
 addons
