Bug 1346280 - Use --focus-ring-box-shadow in place of focusRingShadow/yosemiteRingFocusShadow in osx theme. r=Gijs * replace use of focusRingShadow with the CSS variable in toolkit osx theme and browser theme files * remove redundant media blocks as --focus-ring-box-shadow is already mac-theme specific * fix focus style for tabprompt buttons (alert buttons) * fix focus style for notification anchor icons
MozReview-Commit-ID: EFAMwSbwdGX

UltraBlame original commit: 967240c44402cc3c5afdbe45d9a510a47b5c70a8

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -24238,27 +24238,18 @@ box
 -
 shadow
 :
-0
-0
-2px
-1px
+var
+(
 -
-moz
 -
-mac
+focus
 -
-focusring
-inset
-0
-0
-3px
-2px
+ring
 -
-moz
+box
 -
-mac
--
-focusring
+shadow
+)
 ;
 }
 /
