--- a/toolkit/themes/osx/global/findBar.css
+++ b/toolkit/themes/osx/global/findBar.css
@@ -612,7 +612,18 @@ box
 -
 shadow
 :
-focusRingShadow
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
 roundButtonShadow
 ;
 }
@@ -837,103 +848,20 @@ box
 -
 shadow
 :
-focusRingShadow
-roundButtonPressedShadow
-;
-}
-media
+var
 (
 -
-moz
 -
-mac
+focus
 -
-yosemite
+ring
 -
-theme
+box
+-
+shadow
 )
-{
-.
-findbar
--
-container
->
-toolbarbutton
-:
--
-moz
--
-focusring
-.
-findbar
--
-find
--
-next
-:
--
-moz
--
-focusring
-.
-findbar
--
-find
--
-previous
-:
--
-moz
--
-focusring
-{
-box
--
-shadow
-:
-yosemiteFocusRingShadow
-roundButtonShadow
-;
-}
-.
-findbar
--
-find
--
-next
-:
-hover
-:
-active
-:
--
-moz
--
-focusring
-.
-findbar
--
-find
--
-previous
-:
-hover
-:
-active
-:
--
-moz
--
-focusring
-{
-box
--
-shadow
-:
-yosemiteFocusRingShadow
 roundButtonPressedShadow
 ;
-}
 }
 /
 *
@@ -1165,40 +1093,19 @@ box
 -
 shadow
 :
-focusRingShadow
-;
-}
-media
+var
 (
 -
-moz
 -
-mac
+focus
 -
-yosemite
+ring
 -
-theme
-)
-{
-.
-findbar
--
-textbox
-[
-focused
-=
-"
-true
-"
-]
-{
 box
 -
 shadow
-:
-yosemiteFocusRingShadow
+)
 ;
-}
 }
 .
 findbar
