--- a/toolkit/themes/osx/global/global.css
+++ b/toolkit/themes/osx/global/global.css
@@ -1496,7 +1496,18 @@ box
 -
 shadow
 :
-focusRingShadow
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
 roundButtonShadow
 ;
 }
@@ -1517,7 +1528,18 @@ box
 -
 shadow
 :
-focusRingShadow
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
 roundButtonPressedShadow
 ;
 }
