--- a/toolkit/themes/osx/global/tabprompts.css
+++ b/toolkit/themes/osx/global/tabprompts.css
@@ -500,37 +500,16 @@ box
 -
 shadow
 :
-0
-0
-1px
+var
+(
 -
-moz
 -
-mac
+focus
 -
-focusring
-inset
-0
-0
-4px
-1px
+ring
 -
-moz
+box
 -
-mac
--
-focusring
-0
-0
-1
-.
-5px
-1px
--
-moz
--
-mac
--
-focusring
-;
+shadow
+)
 }
