Bug 1335806 part 4 - [css-grid] Tweak reftests where 'align/justify-self:normal' now means 'start' for grid items with an intrinsic size / aspect ratio.
MozReview-Commit-ID: AztJxC2cBMR

UltraBlame original commit: 2977f445119bdb1679bdd7b646c8038d0c91884e

--- a/layout/reftests/css-grid/grid-item-input-stretch-001.html
+++ b/layout/reftests/css-grid/grid-item-input-stretch-001.html
@@ -243,6 +243,12 @@ grid
 200px
 4px
 ;
+place
+-
+items
+:
+stretch
+;
 }
 input
 {
@@ -380,6 +386,30 @@ head
 >
 <
 body
+>
+<
+div
+class
+=
+"
+grid
+"
+style
+=
+"
+place
+-
+items
+:
+start
+"
+>
+<
+input
+>
+<
+/
+div
 >
 <
 div
