--- a/layout/reftests/css-grid/grid-item-video-stretch-002-ref.html
+++ b/layout/reftests/css-grid/grid-item-video-stretch-002-ref.html
@@ -56,6 +56,7 @@ title
 >
 Reference
 :
+stretching
 video
 items
 with
@@ -1118,6 +1119,277 @@ webm
 <
 /
 div
+>
+<
+script
+>
+var
+sizes
+=
+[
+[
+'
+90px
+'
+'
+40px
+'
+]
+[
+'
+16px
+'
+'
+40px
+'
+]
+[
+'
+16px
+'
+'
+40px
+'
+]
+[
+'
+16px
+'
+'
+40px
+'
+]
+[
+'
+16px
+'
+'
+40px
+'
+]
+[
+'
+98px
+'
+'
+48px
+'
+]
+[
+'
+90px
+'
+'
+8px
+'
+]
+[
+'
+90px
+'
+'
+8px
+'
+]
+[
+'
+90px
+'
+'
+8px
+'
+]
+[
+'
+90px
+'
+'
+8px
+'
+]
+[
+'
+82px
+'
+'
+8px
+'
+]
+[
+'
+82px
+'
+'
+8px
+'
+]
+[
+'
+32px
+'
+'
+40px
+'
+]
+[
+'
+16px
+'
+'
+40px
+'
+]
+[
+'
+16px
+'
+'
+40px
+'
+]
+[
+'
+16px
+'
+'
+40px
+'
+]
+[
+'
+16px
+'
+'
+40px
+'
+]
+[
+'
+32px
+'
+'
+48px
+'
+]
+[
+'
+90px
+'
+'
+16px
+'
+]
+[
+'
+16px
+'
+'
+16px
+'
+]
+[
+'
+16px
+'
+'
+16px
+'
+]
+[
+'
+16px
+'
+'
+16px
+'
+]
+[
+'
+16px
+'
+'
+16px
+'
+]
+[
+'
+98px
+'
+'
+16px
+'
+]
+]
+;
+var
+items
+=
+document
+.
+querySelectorAll
+(
+'
+video
+'
+)
+for
+(
+var
+i
+=
+0
+;
+i
+<
+items
+.
+length
+;
++
++
+i
+)
+{
+let
+item
+=
+items
+[
+i
+]
+;
+item
+.
+style
+.
+width
+=
+sizes
+[
+i
+]
+[
+0
+]
+;
+item
+.
+style
+.
+height
+=
+sizes
+[
+i
+]
+[
+1
+]
+;
+}
+<
+/
+script
 >
 <
 /
