--- a/layout/reftests/css-grid/grid-item-video-stretch-002.html
+++ b/layout/reftests/css-grid/grid-item-video-stretch-002.html
@@ -54,8 +54,11 @@ utf
 <
 title
 >
-Reference
+CSS
+Grid
+Test
 :
+stretching
 video
 items
 with
@@ -109,6 +112,67 @@ id
 "
 >
 <
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
+drafts
+.
+csswg
+.
+org
+/
+css
+-
+align
+-
+3
+/
+#
+valdef
+-
+justify
+-
+self
+-
+normal
+"
+>
+<
+link
+rel
+=
+"
+match
+"
+href
+=
+"
+grid
+-
+item
+-
+video
+-
+stretch
+-
+002
+-
+ref
+.
+html
+"
+>
+<
 style
 type
 =
@@ -144,16 +208,25 @@ grey
 ;
 grid
 :
-50px
-/
-100px
-;
-padding
-:
 10px
-4px
+50px
 3px
+/
 6px
+100px
+4px
+;
+align
+-
+items
+:
+stretch
+;
+justify
+-
+items
+:
+stretch
 ;
 }
 video
@@ -175,13 +248,13 @@ background
 :
 lightgrey
 ;
-width
+grid
+-
+area
 :
-16px
-;
-height
-:
-8px
+2
+/
+2
 ;
 }
 .
@@ -214,7 +287,7 @@ margin
 7px
 3px
 1px
-0
+auto
 ;
 }
 .
@@ -223,9 +296,9 @@ hmaa
 margin
 :
 7px
-0
+auto
 1px
-0
+auto
 ;
 }
 .
@@ -233,7 +306,7 @@ vma10
 {
 margin
 :
-0
+auto
 7px
 3px
 1px
@@ -244,70 +317,30 @@ vmaa
 {
 margin
 :
-0
+auto
 7px
-0
+auto
 1px
 ;
 }
 .
-js
+mxw
 {
-justify
+max
 -
-self
+width
 :
-start
+32px
 ;
 }
 .
-je
+mxh
 {
-justify
+max
 -
-self
+height
 :
-end
-;
-}
-.
-jc
-{
-justify
--
-self
-:
-center
-;
-}
-.
-as
-{
-align
--
-self
-:
-start
-;
-}
-.
-ae
-{
-align
--
-self
-:
-end
-;
-}
-.
-ac
-{
-align
--
-self
-:
-center
+16px
 ;
 }
 .
@@ -378,7 +411,6 @@ class
 =
 "
 hma10
-je
 "
 src
 =
@@ -410,7 +442,6 @@ class
 =
 "
 hmaa
-jc
 "
 src
 =
@@ -443,7 +474,6 @@ class
 "
 vr
 hma10
-je
 "
 src
 =
@@ -476,7 +506,6 @@ class
 "
 vr
 hmaa
-jc
 "
 src
 =
@@ -539,7 +568,6 @@ class
 =
 "
 vma10
-ae
 "
 src
 =
@@ -571,7 +599,6 @@ class
 =
 "
 vmaa
-ac
 "
 src
 =
@@ -604,7 +631,6 @@ class
 "
 vr
 vma10
-ae
 "
 src
 =
@@ -637,7 +663,6 @@ class
 "
 vr
 vmaa
-ac
 "
 src
 =
@@ -671,7 +696,6 @@ class
 vr
 p
 vma10
-ae
 "
 src
 =
@@ -705,7 +729,6 @@ class
 vr
 p
 vmaa
-ac
 "
 src
 =
@@ -770,7 +793,6 @@ class
 "
 mxw
 hma10
-je
 "
 src
 =
@@ -803,7 +825,6 @@ class
 "
 mxw
 hmaa
-jc
 "
 src
 =
@@ -837,7 +858,6 @@ class
 mxw
 vr
 hma10
-je
 "
 src
 =
@@ -871,7 +891,6 @@ class
 mxw
 vr
 hmaa
-jc
 "
 src
 =
@@ -968,7 +987,6 @@ class
 "
 mxh
 hma10
-je
 "
 src
 =
@@ -1001,7 +1019,6 @@ class
 "
 mxh
 hmaa
-jc
 "
 src
 =
@@ -1035,7 +1052,6 @@ class
 mxh
 vr
 hma10
-je
 "
 src
 =
@@ -1069,7 +1085,6 @@ class
 mxh
 vr
 hmaa
-jc
 "
 src
 =
@@ -1118,6 +1133,130 @@ webm
 <
 /
 div
+>
+<
+!
+-
+-
+<
+script
+>
+function
+test
+(
+)
+{
+document
+.
+body
+.
+clientHeight
+;
+var
+videos
+=
+document
+.
+querySelectorAll
+(
+'
+video
+'
+)
+;
+var
+s
+=
+'
+[
+\
+n
+'
+;
+for
+(
+var
+i
+=
+0
+;
+i
+<
+videos
+.
+length
+;
++
++
+i
+)
+{
+let
+cs
+=
+window
+.
+getComputedStyle
+(
+videos
+[
+i
+]
+)
+s
++
+=
+"
+[
+'
+"
++
+cs
+.
+width
++
+"
+'
+'
+"
++
+cs
+.
+height
++
+"
+'
+]
+\
+n
+"
+;
+}
+s
++
+=
+'
+]
+'
+;
+console
+.
+log
+(
+s
+)
+}
+setTimeout
+(
+test
+2000
+)
+<
+/
+script
+>
+-
+-
 >
 <
 /
