--- a/layout/reftests/css-grid/grid-item-button-001-ref.html
+++ b/layout/reftests/css-grid/grid-item-button-001-ref.html
@@ -1757,6 +1757,129 @@ button
 div
 >
 <
+div
+class
+=
+"
+grid
+rel
+"
+style
+=
+"
+width
+:
+100px
+;
+height
+:
+100px
+;
+position
+:
+relative
+"
+>
+<
+button
+style
+=
+"
+top
+:
+0
+;
+width
+:
+40px
+;
+height
+:
+40px
+"
+>
+AB
+<
+/
+button
+>
+<
+button
+style
+=
+"
+top
+:
+0
+;
+right
+:
+0
+;
+height
+:
+40px
+"
+>
+&
+nbsp
+;
+&
+nbsp
+;
+<
+/
+button
+>
+<
+button
+style
+=
+"
+bottom
+:
+0
+;
+width
+:
+40px
+;
+"
+>
+AB
+<
+/
+button
+>
+<
+button
+style
+=
+"
+bottom
+:
+0
+;
+right
+:
+0
+"
+>
+&
+nbsp
+;
+&
+nbsp
+;
+<
+/
+button
+>
+<
+/
+div
+>
+<
 /
 body
 >
