--- a/layout/reftests/css-grid/grid-item-button-001.html
+++ b/layout/reftests/css-grid/grid-item-button-001.html
@@ -1427,6 +1427,93 @@ button
 div
 >
 <
+div
+class
+=
+"
+grid
+max40
+"
+style
+=
+"
+grid
+:
+50px
+50px
+/
+50px
+50px
+;
+place
+-
+items
+:
+stretch
+"
+>
+<
+button
+>
+AB
+<
+/
+button
+>
+<
+button
+class
+=
+"
+jend
+"
+>
+&
+nbsp
+;
+&
+nbsp
+;
+<
+/
+button
+>
+<
+button
+class
+=
+"
+aend
+"
+>
+AB
+<
+/
+button
+>
+<
+button
+class
+=
+"
+end
+"
+>
+&
+nbsp
+;
+&
+nbsp
+;
+<
+/
+button
+>
+<
+/
+div
+>
+<
 /
 body
 >
