Bug 1151421 Part 3: Update tests of pageYOffset/scrollY to round off when checking expected results. r=smaug
MozReview-Commit-ID: JDS5l06FAaf

UltraBlame original commit: a2ee4de4944ca8dd2e8a97046a625eb86a85f64d

--- a/layout/forms/test/test_bug562447.html
+++ b/layout/forms/test/test_bug562447.html
@@ -217,9 +217,14 @@ by
 5000px
 is
 (
+Math
+.
+round
+(
 window
 .
 pageYOffset
+)
 5000
 "
 Make
@@ -324,9 +329,14 @@ function
 {
 is
 (
+Math
+.
+round
+(
 window
 .
 pageYOffset
+)
 5000
 "
 Sanity
@@ -362,9 +372,14 @@ function
 {
 isnot
 (
+Math
+.
+round
+(
 window
 .
 pageYOffset
+)
 0
 "
 This
