--- a/layout/forms/test/test_bug564115.html
+++ b/layout/forms/test/test_bug564115.html
@@ -270,9 +270,14 @@ function
 {
 is
 (
+Math
+.
+round
+(
 win
 .
 pageYOffset
+)
 5000
 "
 Page
@@ -306,9 +311,14 @@ function
 {
 is
 (
+Math
+.
+round
+(
 win
 .
 pageYOffset
+)
 5000
 "
 The
