Bug 1347619 - Change boxmodel.css to use calc(50% - 1px) instead of 49.5%. r=gl
MozReview-Commit-ID: 1CA5WgfKNL7

UltraBlame original commit: b66398167216f8c1caabcdfca0c5742c6e9ce207

--- a/devtools/client/themes/boxmodel.css
+++ b/devtools/client/themes/boxmodel.css
@@ -1261,10 +1261,13 @@ purple
 ;
 left
 :
-49
-.
-5
+calc
+(
+50
 %
+-
+1px
+)
 ;
 padding
 -
@@ -1315,10 +1318,13 @@ height
 ;
 top
 :
-49
-.
-5
+calc
+(
+50
 %
+-
+1px
+)
 ;
 width
 :
