Bug 1335055 - improving accessibility of a tree component (keyboard and semantics). r=Honza
MozReview-Commit-ID: 1ffA4VjuyUZ

UltraBlame original commit: b1d8962e07f92f7608c0b6da9067eab71c2a4514

--- a/devtools/client/shared/components/test/mochitest/test_tree_05.html
+++ b/devtools/client/shared/components/test/mochitest/test_tree_05.html
@@ -362,6 +362,11 @@ renderTree
 (
 )
 ;
+isAccessibleTree
+(
+tree
+)
+;
 TEST_TREE
 .
 expanded
@@ -388,6 +393,16 @@ focused
 "
 G
 "
+}
+)
+;
+isAccessibleTree
+(
+tree
+{
+hasActiveDescendant
+:
+true
 }
 )
 ;
