--- a/devtools/client/shared/components/test/mochitest/test_tree_04.html
+++ b/devtools/client/shared/components/test/mochitest/test_tree_04.html
@@ -418,6 +418,11 @@ ITEM_HEIGHT
 }
 )
 ;
+isAccessibleTree
+(
+tree
+)
+;
 isRenderedTree
 (
 document
@@ -539,6 +544,11 @@ scroll
 *
 ITEM_HEIGHT
 }
+)
+;
+isAccessibleTree
+(
+tree
 )
 ;
 isRenderedTree
