Bug 1347164 - Rewrite mochitest test_specified_value_serialization.html to look more like test_computed_style.html. r=dholbert
MozReview-Commit-ID: 4XSBQXtYSth

UltraBlame original commit: 18c70bc07c6d26c235f4961a720f1416d2f8daba

--- a/layout/style/test/test_specified_value_serialization.html
+++ b/layout/style/test/test_specified_value_serialization.html
@@ -4,36 +4,20 @@ doctype
 html
 >
 <
-!
--
--
-https
-:
-/
-/
-bugzilla
-.
-mozilla
-.
-org
-/
-show_bug
-.
-cgi
-?
-id
-=
-721136
--
--
+html
+>
+<
+head
 >
 <
 title
 >
 Test
 for
-Bug
-721136
+miscellaneous
+specified
+value
+issues
 <
 /
 title
@@ -93,6 +77,13 @@ css
 /
 >
 <
+/
+head
+>
+<
+body
+>
+<
 a
 target
 =
@@ -118,15 +109,44 @@ cgi
 ?
 id
 =
-721136
 "
 >
 Mozilla
 Bug
-721136
 <
 /
 a
+>
+<
+p
+id
+=
+"
+display
+"
+>
+<
+/
+p
+>
+<
+div
+id
+=
+"
+content
+"
+style
+=
+"
+display
+:
+none
+"
+>
+<
+/
+div
 >
 <
 pre
@@ -138,7 +158,28 @@ test
 >
 <
 script
+type
+=
+"
+application
+/
+javascript
+"
 >
+(
+function
+test_bug_721136
+(
+)
+{
+/
+/
+Test
+for
+transform
+property
+serialization
+.
 [
 [
 "
@@ -860,6 +901,11 @@ in
 a
 useful
 state
+}
+)
+(
+)
+;
 <
 /
 script
@@ -867,4 +913,12 @@ script
 <
 /
 pre
+>
+<
+/
+body
+>
+<
+/
+html
 >
