Bug 1333990: Part 3a - Use async loading and in-memory caching for WebExtension content scripts. r=aswan
MozReview-Commit-ID: GcdKDbWcUtu

UltraBlame original commit: 34710ba3077609aab152f9d9db3dc3ce57aa1226

--- a/toolkit/components/extensions/test/mochitest/test_ext_web_accessible_resources.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_web_accessible_resources.html
@@ -1651,7 +1651,7 @@ run_at
 "
 :
 "
-document_start
+document_end
 "
 "
 js
@@ -2349,7 +2349,7 @@ run_at
 "
 :
 "
-document_start
+document_end
 "
 "
 js
