--- a/layout/style/test/test_specified_value_serialization.html
+++ b/layout/style/test/test_specified_value_serialization.html
@@ -4,20 +4,36 @@ doctype
 html
 >
 <
-html
->
-<
-head
+!
+-
+-
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+721136
+-
+-
 >
 <
 title
 >
 Test
 for
-miscellaneous
-specified
-value
-issues
+Bug
+721136
 <
 /
 title
@@ -77,13 +93,6 @@ css
 /
 >
 <
-/
-head
->
-<
-body
->
-<
 a
 target
 =
@@ -109,44 +118,15 @@ cgi
 ?
 id
 =
+721136
 "
 >
 Mozilla
 Bug
+721136
 <
 /
 a
->
-<
-p
-id
-=
-"
-display
-"
->
-<
-/
-p
->
-<
-div
-id
-=
-"
-content
-"
-style
-=
-"
-display
-:
-none
-"
->
-<
-/
-div
 >
 <
 pre
@@ -158,28 +138,7 @@ test
 >
 <
 script
-type
-=
-"
-application
-/
-javascript
-"
 >
-(
-function
-test_bug_721136
-(
-)
-{
-/
-/
-Test
-for
-transform
-property
-serialization
-.
 [
 [
 "
@@ -901,11 +860,6 @@ in
 a
 useful
 state
-}
-)
-(
-)
-;
 <
 /
 script
@@ -913,12 +867,4 @@ script
 <
 /
 pre
->
-<
-/
-body
->
-<
-/
-html
 >
