Bug 1339062 - Wallpaper an orange failure by delaying the snapshot for 1s. r=me
UltraBlame original commit: efbc8ac7bca15bb9544bce2a201801dd0841bbf5

--- a/layout/reftests/webcomponents/input-transition-1.html
+++ b/layout/reftests/webcomponents/input-transition-1.html
@@ -166,6 +166,13 @@ function
 (
 )
 {
+setTimeout
+(
+(
+)
+=
+>
+{
 document
 .
 documentElement
@@ -176,7 +183,22 @@ removeAttribute
 class
 "
 )
+}
+1000
+)
 ;
+/
+/
+wait
+for
+the
+checkbox
+SVG
+image
+to
+load
+on
+Android
 }
 )
 ;
