Bug 1341642 - Update test_selectors.html for better test coverage and update test expectations  r=Manishearth
MozReview-Commit-ID: 54BtnYJ85PK

UltraBlame original commit: f34476fa83fad02854ab80d15b5c133f2bfa23b7

--- a/layout/style/test/test_selectors.html
+++ b/layout/style/test/test_selectors.html
@@ -492,7 +492,10 @@ idx
 unexpected
 rule
 index
+for
 "
++
+selector
 )
 ;
 }
@@ -930,6 +933,54 @@ the
 same
 text
 .
+isnot
+(
+style_text
+.
+parentNode
+.
+sheet
+.
+cssRules
+[
+idx
+]
+undefined
+"
+parse
+of
+selector
+\
+"
+"
++
+ser1
++
+"
+\
+"
+failed
+"
+)
+;
+if
+(
+style_text
+.
+parentNode
+.
+sheet
+.
+cssRules
+[
+idx
+]
+!
+=
+=
+undefined
+)
+{
 var
 ser2
 =
@@ -970,6 +1021,7 @@ idempotent
 "
 )
 ;
+}
 ifdoc
 .
 body
@@ -16022,6 +16074,22 @@ p
 "
 )
 ;
+test_balanced_unparseable
+(
+"
+:
+-
+moz
+-
+any
+(
+'
+foo
+'
+)
+"
+)
+;
 test_parseable
 (
 "
@@ -16744,6 +16812,28 @@ bar
 )
 ~
 h3
+"
+)
+;
+test_parseable
+(
+"
+:
+-
+moz
+-
+broken
+"
+)
+;
+test_parseable
+(
+"
+:
+-
+moz
+-
+loading
 "
 )
 ;
