Bug 1339559 - Identify script that resulted in non-structured-clonable data r=kmag
MozReview-Commit-ID: AURB4Qpwimh

UltraBlame original commit: 34cac2e12b45d4559fde1d73185e3f4f4ad1af0b

--- a/mobile/android/components/extensions/test/mochitest/test_ext_tabs_executeScript.html
+++ b/mobile/android/components/extensions/test/mochitest/test_ext_tabs_executeScript.html
@@ -1033,8 +1033,37 @@ test
 assertEq
 (
 "
+<
+anonymous
+code
+>
+"
+error
+.
+fileName
+"
+Got
+expected
+fileName
+"
+)
+;
+browser
+.
+test
+.
+assertEq
+(
+"
 Script
-returned
+'
+<
+anonymous
+code
+>
+'
+result
+is
 non
 -
 structured
@@ -1112,8 +1141,37 @@ test
 assertEq
 (
 "
+<
+anonymous
+code
+>
+"
+error
+.
+fileName
+"
+Got
+expected
+fileName
+"
+)
+;
+browser
+.
+test
+.
+assertEq
+(
+"
 Script
-returned
+'
+<
+anonymous
+code
+>
+'
+result
+is
 non
 -
 structured
@@ -1128,6 +1186,124 @@ message
 Got
 expected
 error
+"
+)
+;
+}
+)
+browser
+.
+tabs
+.
+executeScript
+(
+{
+file
+:
+"
+script3
+.
+js
+"
+}
+)
+.
+then
+(
+result
+=
+>
+{
+browser
+.
+test
+.
+fail
+(
+"
+Expected
+error
+when
+returning
+non
+-
+structured
+-
+clonable
+object
+"
+)
+;
+}
+error
+=
+>
+{
+const
+expected
+=
+/
+Script
+'
+.
+*
+script3
+.
+js
+'
+result
+is
+non
+-
+structured
+-
+clonable
+data
+/
+;
+browser
+.
+test
+.
+assertTrue
+(
+expected
+.
+test
+(
+error
+.
+message
+)
+"
+Got
+expected
+error
+"
+)
+;
+browser
+.
+test
+.
+assertTrue
+(
+error
+.
+fileName
+.
+endsWith
+(
+"
+script3
+.
+js
+"
+)
+"
+Got
+expected
+fileName
 "
 )
 ;
@@ -2133,6 +2309,15 @@ js
 :
 "
 27
+"
+"
+script3
+.
+js
+"
+:
+"
+window
 "
 }
 }
