Bug 1348137 - Remove border and background fallback styling from statusbar. r=dao
UltraBlame original commit: 784aca50c657cf466746c3db5957c67c824bf3f8

--- a/toolkit/themes/linux/global/global.css
+++ b/toolkit/themes/linux/global/global.css
@@ -855,52 +855,26 @@ appearance
 :
 statusbar
 ;
-border
--
-top
-:
-1px
-solid
-ThreeDLightShadow
-;
-border
--
-left
-:
-1px
-solid
-ThreeDShadow
-;
-border
--
-right
-:
-1px
-solid
-ThreeDHighlight
-;
-border
--
-bottom
-:
-1px
-solid
-ThreeDHighlight
-;
-background
--
-color
-:
--
-moz
--
-Dialog
-;
 min
 -
 height
 :
 22px
+;
+}
+statusbar
+:
+-
+moz
+-
+lwtheme
+{
+-
+moz
+-
+appearance
+:
+none
 ;
 }
 statusbarpanel
@@ -929,38 +903,6 @@ box
 pack
 :
 center
-;
-border
--
-left
-:
-1px
-solid
-ThreeDHighlight
-;
-border
--
-top
-:
-1px
-solid
-ThreeDHighlight
-;
-border
--
-right
-:
-1px
-solid
-ThreeDShadow
-;
-border
--
-bottom
-:
-1px
-solid
-ThreeDShadow
 ;
 padding
 :
@@ -1001,10 +943,6 @@ resizerpanel
 padding
 :
 0
-;
-border
-:
-none
 ;
 }
 .
