Bug 1348626 - Retry when isPinged() failed to avoid false alarm. r=francois
MozReview-Commit-ID: BOdJZReICxZ

UltraBlame original commit: f7541b903b1565a6274627e2da19e6d780ba2559

--- a/toolkit/components/url-classifier/tests/mochitest/test_classify_ping.html
+++ b/toolkit/components/url-classifier/tests/mochitest/test_classify_ping.html
@@ -254,6 +254,11 @@ trackingprotection
 enabled
 "
 ;
+const
+RETRY_TIMEOUT_MS
+=
+200
+;
 var
 testData
 =
@@ -333,22 +338,25 @@ resolve
 reject
 )
 {
-setTimeout
-(
-function
-(
-)
-{
-isPinged
+/
+/
+Retry
+at
+most
+30
+seconds
+.
+isPingedWithRetry
 (
 id
 expectPing
 msg
 resolve
-)
-;
-}
-timeout
+30
+*
+1000
+/
+RETRY_TIMEOUT_MS
 )
 ;
 }
@@ -598,12 +606,13 @@ elm
 ;
 }
 function
-isPinged
+isPingedWithRetry
 (
 id
 expected
 msg
 callback
+retryCnt
 )
 {
 var
@@ -671,6 +680,27 @@ response
 ping
 "
 ;
+let
+success
+=
+isPinged
+=
+=
+=
+expected
+;
+if
+(
+success
+|
+|
+0
+=
+=
+=
+retryCnt
+)
+{
 is
 (
 expected
@@ -682,12 +712,62 @@ callback
 (
 )
 ;
+return
+;
+}
+/
+/
+Retry
+on
+failure
+.
+setTimeout
+(
+(
+)
+=
+>
+{
+isPingedWithRetry
+(
+id
+expected
+msg
+callback
+retryCnt
+-
+1
+)
+;
+}
+RETRY_TIMEOUT_MS
+)
+;
 }
 ;
 xhr
 .
 send
 (
+)
+;
+}
+function
+isPinged
+(
+id
+expected
+msg
+callback
+)
+{
+isPingedWithRetry
+(
+id
+expected
+msg
+callback
+0
 )
 ;
 }
