Bug 1347928 - Remove legacy information-*.png icons. r=jaws
MozReview-Commit-ID: 47FAxEjg4KG

UltraBlame original commit: d9839e96fe102c376c350a81fb15ebb5b7bfc5c1

--- a/browser/themes/shared/aboutProviderDirectory.css
+++ b/browser/themes/shared/aboutProviderDirectory.css
@@ -30,29 +30,23 @@ background
 :
 url
 (
-'
 chrome
 :
 /
 /
-global
+browser
 /
 skin
 /
-icons
-/
-information
--
-24
+info
 .
-png
-'
+svg
 )
 no
 -
 repeat
 left
-4px
+8px
 ;
 padding
 -
