Bug 1337238 - Reuse some id resources in layout xml file r=sebastian
No need to create id resources for common widgets in each activities, e.g.
toolbar. Reuse id resources to make less ambiguous when invoking `findViewById`

In BrowserApp and CustomTabsActivity, both of them have ActionBar and
Progress-Bar. Let them use the same id resource.

MozReview-Commit-ID: 2jq18dwlBlm

UltraBlame original commit: d05c2e4eef153546cf9b47120a3d233b1e771f05

--- a/mobile/android/base/resources/layout/customtabs_activity.xml
+++ b/mobile/android/base/resources/layout/customtabs_activity.xml
@@ -202,10 +202,9 @@ android
 id
 =
 "
-+
 id
 /
-toolbar
+actionbar
 "
 android
 :
@@ -287,10 +286,9 @@ android
 layout_below
 =
 "
-+
 id
 /
-toolbar
+actionbar
 "
 android
 :
