--- a/mobile/android/base/resources/layout/gecko_app.xml
+++ b/mobile/android/base/resources/layout/gecko_app.xml
@@ -1172,7 +1172,6 @@ android
 id
 =
 "
-+
 id
 /
 actionbar
@@ -1225,10 +1224,9 @@ android
 id
 =
 "
-+
 id
 /
-progress
+page_progress
 "
 android
 :
