--- a/mobile/android/base/resources/layout/customtabs_activity.xml
+++ b/mobile/android/base/resources/layout/customtabs_activity.xml
@@ -122,6 +122,23 @@ res
 -
 auto
 "
+xmlns
+:
+tools
+=
+"
+http
+:
+/
+/
+schemas
+.
+android
+.
+com
+/
+tools
+"
 android
 :
 id
@@ -409,6 +426,82 @@ RelativeLayout
 <
 /
 view
+>
+<
+ProgressBar
+android
+:
+id
+=
+"
+id
+/
+page_progress
+"
+style
+=
+"
+style
+/
+Base
+.
+Widget
+.
+AppCompat
+.
+ProgressBar
+.
+Horizontal
+"
+android
+:
+layout_width
+=
+"
+match_parent
+"
+android
+:
+layout_height
+=
+"
+4dp
+"
+android
+:
+layout_alignTop
+=
+"
+id
+/
+main_layout
+"
+android
+:
+background
+=
+"
+drawable
+/
+url_bar_bg
+"
+android
+:
+progressDrawable
+=
+"
+drawable
+/
+progressbar
+"
+tools
+:
+progress
+=
+"
+70
+"
+/
 >
 <
 /
