Bug 1347164 - set expected-fail for css-color-4 test with stylo. r=xidorn
Currently, stylo doesn't have css-color-4 implementation. Set expected-fail for these tests.

UltraBlame original commit: a49749aa7711cb6fae5e6dfaf1b1aca8fb9ece52

--- a/layout/style/test/test_computed_style.html
+++ b/layout/style/test/test_computed_style.html
@@ -3911,13 +3911,12 @@ rgba
 )
 "
 ]
-/
-/
-css
--
-color
--
-4
+]
+;
+var
+css_color_4
+=
+[
 [
 "
 rgba
@@ -3948,7 +3947,7 @@ rgba
 /
 0
 .
-5
+1
 )
 "
 "
@@ -3959,7 +3958,7 @@ rgba
 0
 0
 .
-5
+1
 )
 "
 ]
@@ -3993,7 +3992,7 @@ rgb
 /
 0
 .
-5
+2
 )
 "
 "
@@ -4004,7 +4003,7 @@ rgba
 0
 0
 .
-5
+2
 )
 "
 ]
@@ -4042,7 +4041,7 @@ hsla
 /
 0
 .
-5
+3
 )
 "
 "
@@ -4053,7 +4052,7 @@ rgba
 0
 0
 .
-5
+3
 )
 "
 ]
@@ -4091,7 +4090,7 @@ hsl
 /
 0
 .
-5
+4
 )
 "
 "
@@ -4102,7 +4101,7 @@ rgba
 0
 0
 .
-5
+4
 )
 "
 ]
@@ -4184,6 +4183,70 @@ test
 1
 ]
 "
+computed
+value
+of
+"
++
+test
+[
+0
+]
+)
+;
+}
+for
+(
+var
+i
+=
+0
+;
+i
+<
+css_color_4
+.
+length
+;
++
++
+i
+)
+{
+var
+test
+=
+css_color_4
+[
+i
+]
+;
+p
+.
+style
+.
+color
+=
+test
+[
+0
+]
+;
+is
+(
+cs
+.
+color
+test
+[
+1
+]
+"
+css
+-
+color
+-
+4
 computed
 value
 of
