--- a/layout/style/test/test_specified_value_serialization.html
+++ b/layout/style/test/test_specified_value_serialization.html
@@ -676,6 +676,9 @@ arr
 1
 ]
 "
+bug
+-
+721136
 incorrect
 serialization
 "
@@ -811,6 +814,9 @@ scaleZ
 )
 "
 "
+bug
+-
+721136
 expected
 case
 canonicalization
@@ -872,6 +878,9 @@ Bar
 )
 "
 "
+bug
+-
+721136
 expected
 case
 canonicalization
@@ -1041,13 +1050,12 @@ rgba
 )
 "
 ]
-/
-/
-css
--
-color
--
-4
+]
+;
+var
+css_color_4
+=
+[
 [
 "
 rgba
@@ -1078,7 +1086,7 @@ rgba
 /
 0
 .
-5
+1
 )
 "
 "
@@ -1089,7 +1097,7 @@ rgba
 0
 0
 .
-5
+1
 )
 "
 ]
@@ -1123,7 +1131,7 @@ rgb
 /
 0
 .
-5
+2
 )
 "
 "
@@ -1134,7 +1142,7 @@ rgba
 0
 0
 .
-5
+2
 )
 "
 ]
@@ -1172,7 +1180,7 @@ hsla
 /
 0
 .
-5
+3
 )
 "
 "
@@ -1183,7 +1191,7 @@ rgba
 0
 0
 .
-5
+3
 )
 "
 ]
@@ -1221,7 +1229,7 @@ hsl
 /
 0
 .
-5
+4
 )
 "
 "
@@ -1232,7 +1240,7 @@ rgba
 0
 0
 .
-5
+4
 )
 "
 ]
@@ -1318,6 +1326,72 @@ test
 1
 ]
 "
+serialization
+value
+of
+"
++
+test
+[
+0
+]
+)
+;
+}
+for
+(
+var
+i
+=
+0
+;
+i
+<
+css_color_4
+.
+length
+;
++
++
+i
+)
+{
+var
+test
+=
+css_color_4
+[
+i
+]
+;
+p
+.
+style
+.
+color
+=
+test
+[
+0
+]
+;
+is
+(
+p
+.
+style
+.
+color
+test
+[
+1
+]
+"
+css
+-
+color
+-
+4
 serialization
 value
 of
