Bug 1349137 - Consolidate button color rules. r=johannh
MozReview-Commit-ID: BS5WuQy7ykN

UltraBlame original commit: 55b8f2772d011df2cfeb7a0baee668384df8f021

--- a/toolkit/themes/linux/global/button.css
+++ b/toolkit/themes/linux/global/button.css
@@ -269,7 +269,6 @@ margin
 1px
 5px
 2px
-5px
 ;
 min
 -
@@ -366,6 +365,40 @@ state
 button
 :
 hover
+:
+not
+(
+:
+-
+moz
+-
+any
+(
+:
+active
+[
+disabled
+=
+"
+true
+"
+]
+[
+open
+=
+"
+true
+"
+]
+[
+checked
+=
+"
+true
+"
+]
+)
+)
 {
 color
 :
@@ -387,63 +420,6 @@ buttonhovertext
 .
 .
 .
-active
-/
-open
-/
-checked
-state
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
-*
-/
-button
-:
-hover
-:
-active
-button
-[
-open
-=
-"
-true
-"
-]
-button
-[
-checked
-=
-"
-true
-"
-]
-{
-color
-:
-ButtonText
-;
-}
-/
-*
-.
-.
-.
-.
-.
-.
-.
-.
-.
-.
 disabled
 state
 .
@@ -466,18 +442,6 @@ disabled
 true
 "
 ]
-button
-[
-disabled
-=
-"
-true
-"
-]
-:
-hover
-:
-active
 {
 color
 :
