Bug 1348574 - Clean up .autocomplete-richlistitem styling. r=mak
MozReview-Commit-ID: K1jZgM7iFos

UltraBlame original commit: 2b00bde40255621c261da061506514bf02f58b4c

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -7825,23 +7825,6 @@ transparent
 ;
 }
 .
-autocomplete
--
-richlistitem
-[
-selected
-=
-true
-]
-{
-background
--
-color
-:
-Highlight
-;
-}
-.
 ac
 -
 title
@@ -7855,6 +7838,18 @@ size
 05em
 ;
 }
+.
+ac
+-
+separator
+.
+ac
+-
+url
+.
+ac
+-
+action
 .
 ac
 -
@@ -7909,71 +7904,48 @@ padding
 ac
 -
 separator
+:
+not
+(
+[
+selected
+=
+true
+]
+)
 .
 ac
 -
 url
+:
+not
+(
+[
+selected
+=
+true
+]
+)
 .
 ac
 -
 action
-{
-font
--
-size
 :
-0
-.
-9em
-;
+not
+(
+[
+selected
+=
+true
+]
+)
+{
 color
 :
 -
 moz
 -
 nativehyperlinktext
-;
-}
-.
-ac
--
-title
-[
-selected
-=
-true
-]
-.
-ac
--
-separator
-[
-selected
-]
-.
-ac
--
-url
-[
-selected
-=
-true
-]
-.
-ac
--
-action
-[
-selected
-=
-true
-]
-{
-color
-:
-inherit
-!
-important
 ;
 }
 .
