--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -14700,6 +14700,17 @@ hsl
 %
 )
 ;
+color
+:
+hsl
+(
+0
+0
+%
+100
+%
+)
+;
 }
 .
 ac
@@ -14712,18 +14723,19 @@ size
 :
 14px
 ;
-color
-:
-hsl
-(
-0
-0
-%
-0
-%
-)
-;
 }
+.
+ac
+-
+separator
+.
+ac
+-
+url
+.
+ac
+-
+action
 .
 ac
 -
@@ -14790,26 +14802,15 @@ padding
 ac
 -
 separator
-.
-ac
--
-url
-.
-ac
--
-action
-{
-font
--
-size
 :
-12px
-;
-}
-.
-ac
--
-separator
+not
+(
+[
+selected
+=
+true
+]
+)
 {
 color
 :
@@ -14827,6 +14828,15 @@ hsl
 ac
 -
 url
+:
+not
+(
+[
+selected
+=
+true
+]
+)
 {
 color
 :
@@ -14844,6 +14854,15 @@ hsl
 ac
 -
 action
+:
+not
+(
+[
+selected
+=
+true
+]
+)
 {
 color
 :
@@ -14853,47 +14872,6 @@ hsl
 100
 %
 28
-%
-)
-;
-}
-.
-ac
--
-title
-[
-selected
-]
-.
-ac
--
-separator
-[
-selected
-]
-.
-ac
--
-url
-[
-selected
-]
-.
-ac
--
-action
-[
-selected
-]
-{
-color
-:
-hsl
-(
-0
-0
-%
-100
 %
 )
 ;
