--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -12582,30 +12582,6 @@ transparent
 ;
 }
 .
-autocomplete
--
-richlistitem
-[
-selected
-=
-true
-]
-{
-background
--
-color
-:
-hsl
-(
-210
-80
-%
-52
-%
-)
-;
-}
-.
 ac
 -
 title
@@ -12615,17 +12591,6 @@ font
 size
 :
 14px
-;
-color
-:
-hsl
-(
-0
-0
-%
-0
-%
-)
 ;
 }
 .
@@ -12648,30 +12613,6 @@ ac
 -
 tag
 {
-background
--
-color
-:
-hsl
-(
-216
-0
-%
-88
-%
-)
-;
-color
-:
-hsl
-(
-0
-0
-%
-0
-%
-)
-;
 border
 -
 radius
@@ -12708,147 +12649,6 @@ font
 size
 :
 12px
-;
-}
-.
-ac
--
-separator
-{
-color
-:
-hsl
-(
-0
-0
-%
-50
-%
-)
-;
-}
-.
-ac
--
-url
-{
-color
-:
-hsl
-(
-210
-77
-%
-47
-%
-)
-;
-}
-.
-ac
--
-action
-{
-color
-:
-hsl
-(
-178
-100
-%
-28
-%
-)
-;
-}
-.
-ac
--
-title
-[
-selected
-=
-true
-]
-.
-ac
--
-separator
-[
-selected
-]
-.
-ac
--
-url
-[
-selected
-=
-true
-]
-.
-ac
--
-action
-[
-selected
-=
-true
-]
-{
-color
-:
-hsl
-(
-0
-0
-%
-100
-%
-)
-;
-}
-.
-ac
--
-tags
--
-text
-[
-selected
-]
->
-html
-|
-span
-.
-ac
--
-tag
-{
-background
--
-color
-:
-hsl
-(
-0
-0
-%
-100
-%
-)
-;
-color
-:
-hsl
-(
-210
-80
-%
-40
-%
-)
 ;
 }
 html
@@ -12902,8 +12702,6 @@ windows
 default
 -
 theme
-:
-0
 )
 {
 .
@@ -12920,17 +12718,268 @@ background
 -
 color
 :
-Highlight
+hsl
+(
+210
+80
+%
+52
+%
+)
+;
+color
+:
+hsl
+(
+0
+0
+%
+100
+%
+)
 ;
 }
 .
 ac
 -
 title
+:
+not
+(
+[
+selected
+=
+true
+]
+)
 {
 color
 :
-inherit
+hsl
+(
+0
+0
+%
+0
+%
+)
+;
+}
+.
+ac
+-
+separator
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+color
+:
+hsl
+(
+0
+0
+%
+50
+%
+)
+;
+}
+.
+ac
+-
+url
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+color
+:
+hsl
+(
+210
+77
+%
+47
+%
+)
+;
+}
+.
+ac
+-
+action
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+color
+:
+hsl
+(
+178
+100
+%
+28
+%
+)
+;
+}
+html
+|
+span
+.
+ac
+-
+tag
+{
+background
+-
+color
+:
+hsl
+(
+216
+0
+%
+88
+%
+)
+;
+color
+:
+hsl
+(
+0
+0
+%
+0
+%
+)
+;
+}
+.
+ac
+-
+tags
+-
+text
+[
+selected
+]
+>
+html
+|
+span
+.
+ac
+-
+tag
+{
+background
+-
+color
+:
+hsl
+(
+0
+0
+%
+100
+%
+)
+;
+color
+:
+hsl
+(
+210
+80
+%
+40
+%
+)
+;
+}
+}
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+:
+0
+)
+{
+.
+ac
+-
+separator
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+.
+ac
+-
+url
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+.
+ac
+-
+action
+:
+not
+(
+[
+selected
+=
+true
+]
+)
+{
+color
+:
+-
+moz
+-
+nativehyperlinktext
 ;
 }
 html
@@ -12956,27 +13005,6 @@ color
 moz
 -
 Field
-;
-}
-.
-ac
--
-separator
-.
-ac
--
-url
-.
-ac
--
-action
-{
-color
-:
--
-moz
--
-nativehyperlinktext
 ;
 }
 .
