--- a/toolkit/themes/windows/global/autocomplete.css
+++ b/toolkit/themes/windows/global/autocomplete.css
@@ -752,6 +752,25 @@ margin
 ;
 }
 .
+autocomplete
+-
+richlistitem
+[
+selected
+]
+{
+background
+-
+color
+:
+Highlight
+;
+color
+:
+HighlightText
+;
+}
+.
 ac
 -
 type
