Bug 1321981 - [RTL] ViewPager Support - part 4. Switch to RtlViewPager, r=sebastian
MozReview-Commit-ID: 2s695og8Umo

UltraBlame original commit: 2ed5a83f2ae2bc560e6f30f073e4d06ea37c634f

--- a/mobile/android/base/resources/layout/activity_stream_main_toppanel.xml
+++ b/mobile/android/base/resources/layout/activity_stream_main_toppanel.xml
@@ -84,15 +84,13 @@ vertical
 "
 >
 <
-android
+com
 .
-support
+booking
 .
-v4
+rtlviewpager
 .
-view
-.
-ViewPager
+RtlViewPager
 android
 :
 layout_marginTop
