Bug 1298321 - Refactor tests related to getHash. r=francois
UltraBlame original commit: 71897bf73d33d0e74661c69e661a306fe44b17a1

--- a/toolkit/components/url-classifier/tests/mochitest/test_classifier_changetablepref.html
+++ b/toolkit/components/url-classifier/tests/mochitest/test_classifier_changetablepref.html
@@ -173,6 +173,20 @@ test
 >
 <
 script
+src
+=
+"
+head
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
 class
 =
 "
@@ -621,251 +635,6 @@ TYPE_ONE_SHOT
 ;
 }
 function
-addCompletionToServer
-(
-list
-url
-)
-{
-return
-new
-Promise
-(
-function
-(
-resolve
-reject
-)
-{
-var
-listParam
-=
-"
-list
-=
-"
-+
-list
-;
-var
-fullhashParam
-=
-"
-fullhash
-=
-"
-+
-hash
-(
-url
-)
-;
-var
-xhr
-=
-new
-XMLHttpRequest
-;
-xhr
-.
-open
-(
-"
-PUT
-"
-UPDATE_URL
-+
-"
-?
-"
-+
-listParam
-+
-"
-&
-"
-+
-fullhashParam
-true
-)
-;
-xhr
-.
-setRequestHeader
-(
-"
-Content
--
-Type
-"
-"
-text
-/
-plain
-"
-)
-;
-xhr
-.
-onreadystatechange
-=
-function
-(
-)
-{
-if
-(
-this
-.
-readyState
-=
-=
-this
-.
-DONE
-)
-{
-resolve
-(
-)
-;
-}
-}
-;
-xhr
-.
-send
-(
-)
-;
-}
-)
-;
-}
-function
-hash
-(
-str
-)
-{
-function
-bytesFromString
-(
-str
-)
-{
-var
-converter
-=
-SpecialPowers
-.
-Cc
-[
-"
-mozilla
-.
-org
-/
-intl
-/
-scriptableunicodeconverter
-"
-]
-.
-createInstance
-(
-SpecialPowers
-.
-Ci
-.
-nsIScriptableUnicodeConverter
-)
-;
-converter
-.
-charset
-=
-"
-UTF
--
-8
-"
-;
-return
-converter
-.
-convertToByteArray
-(
-str
-)
-;
-}
-var
-hasher
-=
-SpecialPowers
-.
-Cc
-[
-"
-mozilla
-.
-org
-/
-security
-/
-hash
-;
-1
-"
-]
-.
-createInstance
-(
-SpecialPowers
-.
-Ci
-.
-nsICryptoHash
-)
-;
-var
-data
-=
-bytesFromString
-(
-str
-)
-;
-hasher
-.
-init
-(
-hasher
-.
-SHA256
-)
-;
-hasher
-.
-update
-(
-data
-data
-.
-length
-)
-;
-return
-hasher
-.
-finish
-(
-true
-)
-;
-}
-function
 runTest
 (
 )
@@ -995,6 +764,7 @@ example
 com
 /
 "
+UPDATE_URL
 )
 ;
 Promise
