Bug 1061823 - Allow to edit width and height in the box model. r=gl
UltraBlame original commit: bb064bc054f9584b1245e73d76f8a2d8d5bcbb0b

--- a/devtools/client/themes/boxmodel.css
+++ b/devtools/client/themes/boxmodel.css
@@ -331,7 +331,7 @@ outlines
 .
 boxmodel
 -
-content
+contents
 {
 height
 :
@@ -468,7 +468,7 @@ color
 .
 boxmodel
 -
-content
+contents
 {
 background
 -
@@ -599,6 +599,10 @@ boxmodel
 main
 >
 p
+.
+boxmodel
+-
+size
 {
 position
 :
@@ -637,6 +641,10 @@ main
 p
 >
 input
+.
+boxmodel
+-
+content
 {
 vertical
 -
@@ -921,7 +929,7 @@ border
 .
 boxmodel
 -
-left
+right
 .
 boxmodel
 -
@@ -929,7 +937,7 @@ border
 .
 boxmodel
 -
-right
+left
 .
 boxmodel
 -
@@ -1138,6 +1146,30 @@ auto
 height
 :
 30px
+;
+}
+.
+boxmodel
+-
+size
+>
+p
+{
+display
+:
+inline
+-
+block
+;
+margin
+:
+auto
+;
+line
+-
+height
+:
+0
 ;
 }
 .
@@ -1534,25 +1566,6 @@ hsl
 )
 ;
 }
-/
-*
-Make
-sure
-the
-content
-size
-doesn
-'
-t
-appear
-as
-editable
-like
-the
-other
-sizes
-*
-/
 .
 boxmodel
 -
